feat: objectify configuration on bakcend

--- a/backend/MyStackOverflowApp/src/main/webapp/WEB-INF/web.xml
+++ b/backend/MyStackOverflowApp/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <listener>
+        <listener-class>com.forum.config.OfyService</listener-class>
+    </listener>
+
     <filter>
         <filter-name>ObjectifyFilter</filter-name>
         <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
