--- a/frontend/my-stackoverflow/package.json
+++ b/frontend/my-stackoverflow/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
     "json-server": "^0.17.4",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.32",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
